# SpeckleHackathon-SpeckleReports

./: .env-example  README.md  Readme.md  pyproject.toml
frontend/: .env.local-example  .graphqlconfig  app.py  data_plots.py  package-lock.json  package.json  schema.graphql  vue.config.js
frontend/assets/: style.css
frontend/src/: App.vue  speckleQueries.js  speckleUtils.js
frontend/src/components/: ConfirmButton.vue  Renderer.vue  StreamCard.vue  StreamSearch.vue
frontend/src/components/charts/: BarChart.js
frontend/src/graphql/: streamSearch.graphql
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue  StreamCarbonReport.vue  WelcomeView.vue
server/: .env_example  .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: config.py  main.py  models.py  providers.py  transport_provider.py  webhook_handler_registry.py
server/example/: event.json  event.py  event_data.json  webhook.json
server/speckle_calculator/core/: __init__.py  carbon_calculator.py  carbon_repo.py
server/speckle_calculator/service/: __init__.py  bots.py  carbon.py
server/src/speckle_calculator/: __init__.py
server/src/speckle_calculator/core/: carbon_calculator.py  carbon_repo.py  categories.json
server/src/speckle_calculator/service/: __init__.py  carbon.py  discord.py
server/src/speckle_carbon/core/: __init__.py  carbon_calculator.py  materials.json
server/src/speckle_carbon/service/: __init__.py  carbon.py  discord.py
server/tests/: test_speckle_carbon.py
