[tool.poetry]
name = "connect-py-workshop"
version = "0.1.0"
description = ""
authors = ["izzy lyseggen <izzy.lyseggen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
specklepy = "^2.3.5"
fastapi = "^0.70.0"
stringcase = "^1.2.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
dash = "^2.0.0"
plotly = "^5.3.1"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.9b0"
devtools = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
